finish answers to show correct/incorrect when submitted

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
@@ -11,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="index.pack.js"></script>
+  <!-- <script src="index.pack.js"></script> -->
 </body>
 
 </html>
